--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
+    "dns": "^0.2.2",
     "firebase": "^7.9.1",
+    "firebase-admin": "^8.9.2",
+    "firebase-functions": "^3.3.0",
+    "http2": "^3.3.7",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
     "vuetify": "^2.1.0",
@@ -20,10 +24,11 @@
     "@mdi/font": "^4.9.95",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-service": "^4.2.3",
+    "acorn": "^7.1.1",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.1",
     "material-design-icons-iconfont": "^5.0.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
