--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-pwa": "^4.2.3",
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "dns": "^0.2.2",
