--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/cli-plugin-pwa": "^4.2.3",
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "dns": "^0.2.2",
@@ -17,6 +16,7 @@
     "firebase-functions": "^3.3.0",
     "http2": "^3.3.7",
     "push.js": "^1.0.12",
+    "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
     "vuetify": "^2.1.0",
@@ -26,6 +26,7 @@
     "@mdi/font": "^4.9.95",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-pwa": "^4.2.3",
     "@vue/cli-service": "^4.2.3",
     "acorn": "^7.1.1",
     "babel-eslint": "^10.0.3",
